AUGREL/src/objects/Forms_Validation_Result__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32767</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormField__c</fullName>
        <label>Form Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormNumber__c</fullName>
        <description>Form Number send by alpha</description>
        <label>Form Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormType__c</fullName>
        <label>FormType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The field to show successful or failure validation.</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Forms Validation Result</label>
    <nameField>
        <displayFormat>FVE-{0000}</displayFormat>
        <label>Forms Validation Error Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forms Validation Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>